--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 
 #header {
     width: 100%;
-    height: 48px;
+    height: 56px;
     display: flex;
     background-color: #222;
     filter: drop-shadow(0px 10px 15px #111);
@@ -188,7 +188,8 @@
 
 .text {
     font-family: Inter, sans-serif;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    line-height: 1.5;
     color: #ddd;
 }
 
@@ -204,8 +205,12 @@
     align-items: center;
 }
 
+#login-btn, #post-btn, #logo {
+    font-size: 1.1rem;
+}
+
 .shares, .likes, .comments {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 
 .attachment-text, .post-text {
