--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,9 @@
 }
 
 #app {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    overflow-x: hidden;
     background-color: #111;
     flex-direction: column;
     display: flex;
@@ -120,7 +121,8 @@
 
 .post {
     margin: 20px 0 0 0;
-    width: 650px;
+    width: 100%;
+    max-width: 650px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -317,23 +319,7 @@ textarea {
     margin-right: 0.5rem;
 }
 
-@media (min-width: 825px) and (max-width: 910px) {
-    #logo {
-        opacity: 0;
-    }
-}
-
-@media (min-width: 701px) and (max-width: 824px) {
-    #logo {
-        display: none;
-    }
-
-    #login-btn {
-        display: none;
-    }
-}
-
-@media (max-width: 700px) {
+@media (max-width: 900px) {
     #header {
         min-height: 88px;
         display: grid;
