--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 html, body {
+    padding-top: env(safe-area-inset-top);
+    padding-bottom: env(safe-area-inset-bottom);
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
     height: 100%;
+    min-height: 100dvh;
     margin: 0;
     overflow: hidden;
+    background-color: #222;
 }
 
 * {
