--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@ html, body {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    padding-bottom: env(safe-area-inset-bottom);
     background-color: #111;
     flex-direction: column;
     display: flex;
@@ -65,6 +64,8 @@ html, body {
     -ms-overflow-style: none;
     overscroll-behavior: contain;
     scrollbar-width: none;
+    background-color: #111;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .header-left, .header-right {
