--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,7 +210,7 @@ html, body {
     color: #ddd;
 }
 
-.comment-btn, .like-btn, .share-btn, .attachment-btn, .post-btn, #login-btn, #post-btn, #logo {
+.comment-btn, .like-btn, .share-btn, .attachment-btn, .post-btn, #login-btn, #post-btn, .login-submit-btn, .register-btn, #logo {
     background-color: #333;
     padding: 0.4rem 0.5rem;
     border-radius: 0.5rem;
@@ -374,4 +374,116 @@ textarea {
     #main-page .search-wrapper {
         padding-top: 0;
     }
+}
+
+#login, #register {
+    background-color: #222;
+    width: 100%;
+    max-width: 500px;
+    height: 300px;
+    border-radius: 0.7rem;
+    filter: drop-shadow(0px 0px 10px #090909);
+}
+
+#login-center, #register-center {
+    display: flex;
+    /*justify-content: center;*/
+    margin-top: 60px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.login-header {
+    width: 100%;
+    height: 80px;
+}
+
+.login-title {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.0rem;
+    color: #ddd;
+    font-family: Inter, sans-serif;
+    user-select: none;
+}
+
+.login-content {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem 0.5rem 1rem;
+}
+
+.login-footer {
+    display: flex;
+    width: 100%;
+    height: 60px;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.login-submit-btn, .register-btn {
+    font-size: 1.5rem;
+    padding: 0.8rem 1rem;
+    margin-right: 1rem;
+}
+
+.username-container {
+    width: 100%;
+    height: 100px;
+    display: flex;
+}
+
+.password-container {
+    width: 100%;
+    height: 80px;
+    display: flex;
+}
+
+.login-btn-container {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.forgot-password-container {
+    width: 10px;
+    height: 10px;
+}
+
+.username-field, .password-field {
+    width: 100%;
+    height: 48px;
+    background-color: #333;
+    border-radius: 0.6rem;
+    display: flex;
+    align-items: center;
+    padding: 0.8rem;
+}
+
+.text-input {
+    width: 100%;
+    border: none;
+    font-family: Inter, sans-serif;
+    font-size: 1.1rem;
+    color: #ddd;
+    background-color: #00000000;
+    justify-self: center;
+    border-radius: 0 0.5rem 0.5rem 0;
+}
+
+.text-input:focus {
+    outline: none;
+}
+
+#email-icon, #password-icon {
+    height: 1.2rem;
+    width: 1.2rem;
+    font-size: 1.2rem;
+    margin: 0 0.6rem 0 0;
+    color: #999;
 }
